--- a/DiffGeoLectureSeries/lecture1.tex
+++ b/DiffGeoLectureSeries/lecture1.tex
@@ -3,3 +3,31 @@
 \begin{defn}
 A \ib{topological manifold} is a Hausdorff space $X$ such there exists a countable open cover $\set{U_\alpha}$ of $X$, along with homeomorphisms $\varphi_\alpha : U_\alpha \to V_\alpha$, where $V_\alpha$ is an open subset of $\R^n$.
 \end{defn}
+%
+In this way, we see that a manifold is a topological space that is locally topologically indistinguishable from
+Euclidean space. Both modifiers are important here -- there could be global and geometric properties that 
+differ from $\R^n$.
+%
+\begin{exmp}\enumbreak 
+	\begin{enumerate}
+		\item $\R^n$ is a topological manifold -- it admits a global chart $(\R^n, \id_{\R^n})$.
+		\item The $2$-sphere $S^2 = \set{(x,y,z) \in \R^3 ~:~ x^2 + y^2 + z^2 = 1}$ is a topological
+		manifold. If we let $N$ and $S$ denote the North and South poles repsectively, then we can 
+		construct charts using \ib{stereographic projection}. Stereographic projection from the North
+		pole is a map $\varphi_N : S^2 - \set{N} \to \R^n$, where given a point $p \in S^2 - \set{N}$,
+		we take the line cotaining both $N$ and $p$, which intersects the $z = 0 $ plane at one point 
+		$q$. We then define $\varphi_N(p) = q$. Stereographic projection $\varphi_S$ from the South 
+		pole is defined in an analogous manner. An explicit formula for $\varphi_N$ is 
+		$$\varphi_N(x,y,z) = \left(\frac{x}{1 - z}, \frac{x}{1 - z} \right) $$
+	\end{enumerate}
+\end{exmp}
+%
+\begin{exer}\enumbreak
+	\begin{enumerate}
+		\item $S^2$ does not admit a global chart. Why?
+		\item Give an inverse map $\R^n \to \S^n - {N}$ for stereographic projection from the 
+			North Pole
+		\item Generalize stereographic projection to the $n$-sphere 
+		$S^n = \set{p \in \R^{n+1} ~:~ \norm{p} = 1}$
+	\end{enumerate}
+\end{exer}
